fixed spacing

--- a/src/app/common/components/BrowserRoot/NavBar.scss
+++ b/src/app/common/components/BrowserRoot/NavBar.scss
@@ -33,7 +33,7 @@
 .nav-bar_yh8orf > .download-app > a > img {
 	display: block;
 	width: 75%;
-	margin: 0 auto 20px auto;
+	margin: 0 auto;
 }
 .nav-bar_yh8orf > .footer_ink40x {
 	flex: 0 0 auto;
